--- a/update.cfg
+++ b/update.cfg
@@ -4,7 +4,7 @@ dist: jammy
 [jammy]
 dists: jammy
 seeds: desktop
-architectures: amd64 arm64 mips64el ppc64el s390x
+architectures: amd64 arm64
 seed_base: http://people.ubuntu.com/~ubuntu-archive/seeds/
 archive_base/default: http://archive.ubuntu.com/ubuntu/
 archive_base/ports: http://ports.ubuntu.com/ubuntu-ports/
@@ -15,5 +15,5 @@ archive_base/s390x: %(archive_base/ports)s
 components: main restricted universe
 
 [jammy/vcs]
-seed_base: git@github.com:Ubuntu-Sway
-seed_dist: ubuntusway-meta.%(dist)s
+seed_base: git://git.launchpad.net/~ubuntusway-dev/ubuntu-seeds/+git/  git://git.launchpad.net/~ubuntu-core-dev/ubuntu-seeds/+git/
+seed_dist: ubuntusway.%(dist)s
