--- a/update.cfg
+++ b/update.cfg
@@ -3,15 +3,12 @@ dist: jammy
 
 [jammy]
 dists: jammy
-seeds: desktop
+seeds: desktop live
 architectures: amd64 arm64
-seed_base: http://people.ubuntu.com/~ubuntu-archive/seeds/
-archive_base/default: http://archive.ubuntu.com/ubuntu/
-archive_base/ports: http://ports.ubuntu.com/ubuntu-ports/
-archive_base/ppc64el: %(archive_base/ports)s
-archive_base/armhf: %(archive_base/ports)s
+ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu
+archive_base/default: http://archive.ubuntu.com/ubuntu/,%(ubuntusway_ppas)s
+archive_base/ports: http://ports.ubuntu.com/ubuntu-ports/,%(ubuntusway_ppas)s
 archive_base/arm64: %(archive_base/ports)s
-archive_base/s390x: %(archive_base/ports)s
 components: main restricted universe
 
 [jammy/vcs]
