--- a/debian/control
+++ b/debian/control
@@ -23,3 +23,27 @@ Depends: ${misc:Depends}, ${germinate:Depends}
 Recommends: ${germinate:Recommends}
 Description: ubuntusway Live Settings
  Configuration for the Ubuntu Sway live session
+
+Package: ubuntusway-minimal
+Architecture: any
+Depends: ${misc:Depends}, ${germinate:Depends}
+Recommends: ${germinate:Recommends}
+Description: Minimal core of Ubuntu Sway Remix
+ This metapackage depends on all of the packages in the elementary minimal system,
+ that is a functional command-line system with the following capabilities:
+ .
+  - Boot
+  - Detect hardware
+  - Connect to a network
+  - Install packages
+  - Perform basic diagnostics
+ .
+ It is also used to help ensure proper upgrades, so it is recommended that
+ it not be removed.
+
+Package: ubuntusway-standard
+Architecture: any
+Depends: ${misc:Depends}, ${germinate:Depends}
+Recommends: ${germinate:Recommends}
+Description: CLI-only components of Ubuntu Sway Remix
+ This metapackage depends on most of non-GUI packages from Ubuntu Sway Desktop.
