--- a/update.cfg
+++ b/update.cfg
@@ -3,7 +3,7 @@ dist: jammy
 
 [jammy]
 dists: jammy
-seeds: desktop live
+seeds: desktop live minimal standard
 architectures: amd64 arm64
 ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu
 archive_base/default: http://archive.ubuntu.com/ubuntu/,%(ubuntusway_ppas)s
@@ -12,5 +12,5 @@ archive_base/arm64: %(archive_base/ports)s
 components: main restricted universe
 
 [jammy/vcs]
-seed_base: git://git.launchpad.net/~ubuntusway-dev/ubuntu-seeds/+git/  git://git.launchpad.net/~ubuntu-core-dev/ubuntu-seeds/+git/
+seed_base: git://git.launchpad.net/~ubuntusway-dev/ubuntu-seeds/+git/
 seed_dist: ubuntusway.%(dist)s
