--- a/update.cfg
+++ b/update.cfg
@@ -12,5 +12,5 @@ archive_base/arm64: %(archive_base/ports)s
 components: main restricted universe
 
 [jammy/vcs]
-seed_base: git://git.launchpad.net/~ubuntusway-dev/ubuntu-seeds/+git/
+seed_base: git://github.com/Ubuntu-Sway/
 seed_dist: ubuntusway.%(dist)s
