Switch to github repos

--- a/update.cfg
+++ b/update.cfg
@@ -13,4 +13,4 @@ components: main restricted universe
 
 [jammy/vcs]
 seed_base: git://github.com/Ubuntu-Sway/
-seed_dist: ubuntusway.%(dist)s
+seed_dist: seeds.%(dist)s
