--- a/update.cfg
+++ b/update.cfg
@@ -12,5 +12,5 @@ archive_base/arm64: %(archive_base/ports)s
 components: main restricted universe
 
 [jammy/vcs]
-seed_base: git://github.com/Ubuntu-Sway/
+seed_base: git@github.com:Ubuntu-Sway/
 seed_dist: seeds.%(dist)s
