--- a/update.cfg
+++ b/update.cfg
@@ -5,7 +5,7 @@ dist: jammy
 dists: jammy
 seeds: desktop live minimal standard
 architectures: amd64 arm64
-ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu
+ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/,https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/
 archive_base/default: http://archive.ubuntu.com/ubuntu/,%(ubuntusway_ppas)s
 archive_base/ports: http://ports.ubuntu.com/ubuntu-ports/,%(ubuntusway_ppas)s
 archive_base/arm64: %(archive_base/ports)s
