--- a/update.cfg
+++ b/update.cfg
@@ -1,8 +1,8 @@
 [DEFAULT]
-dist: jammy
+dist: kinetic
 
-[jammy]
-dists: jammy
+[kinetic]
+dists: kinetic
 seeds: desktop live minimal standard
 architectures: amd64 arm64
 ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/,https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/
