--- a/update.cfg
+++ b/update.cfg
@@ -1,8 +1,8 @@
 [DEFAULT]
-dist: kinetic
+dist: lunar
 
-[kinetic]
-dists: kinetic
+[lunar]
+dists: lunar
 seeds: desktop live minimal standard
 architectures: amd64 arm64
 ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/,https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/
