Change to Lunar

--- a/update.cfg
+++ b/update.cfg
@@ -11,6 +11,6 @@ archive_base/ports: http://ports.ubuntu.com/ubuntu-ports/,%(ubuntusway_ppas)s
 archive_base/arm64: %(archive_base/ports)s
 components: main restricted universe
 
-[kinetic/vcs]
+[lunar/vcs]
 seed_base: https://github.com/Ubuntu-Sway/
 seed_dist: seeds.%(dist)s
