--- a/update.cfg
+++ b/update.cfg
@@ -3,7 +3,7 @@ dist: lunar
 
 [lunar]
 dists: lunar
-seeds: desktop live minimal standard
+seeds: desktop desktop-raspi live minimal standard
 architectures: amd64 arm64
 ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/,https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/
 archive_base/default: http://archive.ubuntu.com/ubuntu/,%(ubuntusway_ppas)s
