Switch to Mantic release

--- a/update.cfg
+++ b/update.cfg
@@ -1,8 +1,8 @@
 [DEFAULT]
-dist: lunar
+dist: mantic
 
-[lunar]
-dists: lunar
+[mantic]
+dists: mantic
 seeds: desktop desktop-raspi live minimal standard
 architectures: amd64 arm64
 ubuntusway_ppas: https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/,https://ppa.launchpadcontent.net/ubuntusway-dev/dev/ubuntu/
@@ -11,6 +11,6 @@ archive_base/ports: http://ports.ubuntu.com/ubuntu-ports/,%(ubuntusway_ppas)s
 archive_base/arm64: %(archive_base/ports)s
 components: main restricted universe
 
-[lunar/vcs]
+[mantic/vcs]
 seed_base: https://github.com/Ubuntu-Sway/
 seed_dist: seeds.%(dist)s
